Body bg-color to white and adjust main-sidebar events style

--- a/web/app/components/hero/swipable_component.html.erb
+++ b/web/app/components/hero/swipable_component.html.erb
@@ -10,7 +10,7 @@
 							<div class="font-black text-xl">
 								Quais tipos de evento você curte?
 							</div>
-							<div class="text-sm text-gray-500 px-12">
+							<div class="text-sm text-gray-500 md:px-12">
 								Para receber sugestões personalizadas, indique ao menos
 								<span class="text-green-500 font-bold"><%= @min_events_to_train - events_trained %> eventos</span>
 								que você curte.
