--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
 	<%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
 
 </head>
-<body class="antialiased font-body text-gray-600 bg-gray-50 md:bg-white tap-highlight-none" data-user-type="<%= current_user ? "logged-user" : "guest-user" %>" data-controller="<%= controller_name %>" data-action="<%= action_name %>">
+<body class="antialiased font-body text-gray-600 bg-white md:bg-white tap-highlight-none" data-user-type="<%= current_user ? "logged-user" : "guest-user" %>" data-controller="<%= controller_name %>" data-action="<%= action_name %>">
 
 <!-- Google Tag Manager (noscript) -->
 <noscript>
