--- a/web/app/views/places/show.html.erb
+++ b/web/app/views/places/show.html.erb
@@ -16,14 +16,14 @@
 	</script>
 
 	<div class="mx-auto space-y-3 overflow-hidden is-animated md:border md:border-gray-100 md:rounded-2xl md:shadow-2xl md:max-w-screen-sm sm:container">
-		<div class="px-8 py-3 mx-3 space-y-3 text-center bg-white rounded-md shadow-sm">
+		<div class="bg-gray-100 px-8 py-3 rounded-md space-y-3 text-center">
 			<%= image_tag shrine_image_url(@place, :sm), {
 				loading: :lazy,
 				class:   'w-16 h-16 shadow mx-auto rounded-full',
 				onerror: "this.style.opacity='0'"
 			} if @place.image_data? %>
 			<div>
-				<div class="flex-1 text-2xl font-bold leading-6 text-gray-600 group-hover:text-green-500 md:leading-normal md:pl-0 md:text-4xl">
+				<div class="flex-1 text-2xl font-black leading-6 text-gray-600 group-hover:text-green-500 md:leading-normal md:pl-0 md:text-4xl">
 					<%= @place.details_name %>
 				</div>
 				<div class="pt-1 text-sm leading-tight text-gray-600 md:px-0">
