--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -66,7 +66,7 @@
 		</div>
 	</div>
 	<% if props[:visible][:search] %>
-		<div class="col-span-12 md:col-span-5 md:px-5">
+		<div class="hidden md:block col-span-12 md:col-span-5 md:px-5">
 			<form
 				class="flex items-center h-full px-2 bg-white rounded md:px-5"
 				data-controller="search"
