--- a/web/app/views/feeds/_float_menu.html.erb
+++ b/web/app/views/feeds/_float_menu.html.erb
@@ -75,7 +75,7 @@
         Tópicos seguidos
       </div>
     </div>
-    <div onclick="Turbolinks.visit('/porto-alegre/eventos')" class="me-float-menu__item" data-float-menu-target="item" data-action="click->float-menu#scrollTo" data-collection-identifier="explorer" style="display: flex; opacity: 1">
+    <div onclick="Turbo.visit('/porto-alegre/eventos')" class="me-float-menu__item" data-float-menu-target="item" data-action="click->float-menu#scrollTo" data-collection-identifier="explorer" style="display: flex; opacity: 1">
       <div class="me-float-menu__icon">
         <i class="material-icons">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
