--- a/web/app/javascript/packs/application.scss
+++ b/web/app/javascript/packs/application.scss
@@ -25,7 +25,7 @@
 @import '../stylesheets/components/me-bot';
 @import '../stylesheets/components/me-calendar';
 
-.turbolinks-progress-bar {
+.turbo-progress-bar {
   height: 5px;
   background-color: $brand-color;
   box-shadow: 0 1px 5px #03994c8f;
