--- a/web/app/views/layouts/_google_analytics.html.erb
+++ b/web/app/views/layouts/_google_analytics.html.erb
@@ -13,7 +13,7 @@
                                   }
                               });
     } else {
-        document.addEventListener("turbolinks:load", function (event) {
+        document.addEventListener("turbo:load", function (event) {
             <% if current_user %>
             window.dataLayer.push({
                                       userId: <%= current_user.try(:id) %>
