--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
 	<%= favicon_link_tag 'https://alegreme.sfo2.digitaloceanspaces.com/stable-images/favicon-144x144.png', { sizes: "144x144", type: "image/png" } %>
 
 	<link rel="manifest" href="<%= asset_url 'manifest.json' %>"/>
-	<%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+	<%= stylesheet_pack_tag 'application', media: 'all', 'data-turbo-track': 'reload' %>
 
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -41,7 +41,7 @@
 
 	<%= Gon::Base.render_data %>
 
-	<%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
+	<%= javascript_pack_tag 'application', 'data-turbo-track': 'reload', defer: true %>
 
 </head>
 <body class="antialiased font-body text-gray-600 bg-white md:bg-white tap-highlight-none" data-user-type="<%= current_user ? "logged-user" : "guest-user" %>" data-controller="<%= controller_name %>" data-action="<%= action_name %>">
