--- a/web/app/views/layouts/classifier/_kinds.html.erb
+++ b/web/app/views/layouts/classifier/_kinds.html.erb
@@ -14,7 +14,7 @@
 							<% Artifact.kinds_whitelist.sort.each do |kind| %>
 								<div data-filter-target="chip" data-action="MDCChip:selection->filter#select"
 										 class="me-chip mdc-chip <%= event.kinds_name.include?(kind) ? 'mdc-chip--selected' : nil %>"
-										 data-turbolinks-scroll="false">
+										 data-turbo-scroll="false">
 									<div class="mdc-chip__checkmark">
 										<svg class="mdc-chip__checkmark-svg" viewBox="-2 -3 30 30">
 											<path class="mdc-chip__checkmark-path" fill="none" stroke="black"
