--- a/web/app/views/layouts/classifier/_tags.html.erb
+++ b/web/app/views/layouts/classifier/_tags.html.erb
@@ -19,7 +19,7 @@
 							<% tags_to_select.each do |tag| %>
 								<div data-filter-target="chip" data-action="MDCChip:selection->filter#select"
 									class="me-chip mdc-chip <%= event.tags_of_type(type).include?(tag) ? 'mdc-chip--selected' : nil %>"
-									data-filter-tag-type="things" data-turbolinks-scroll="false">
+									data-filter-tag-type="things" data-turbo-scroll="false">
 									<div class="mdc-chip__checkmark">
 										<svg class="mdc-chip__checkmark-svg" viewBox="-2 -3 30 30">
 											<path class="mdc-chip__checkmark-path" fill="none" stroke="black" d="M1.73,12.91 8.1,19.28 22.79,4.59" />
