--- a/web/app/views/layouts/dashboard.html.erb
+++ b/web/app/views/layouts/dashboard.html.erb
@@ -29,14 +29,14 @@
 	<%= favicon_link_tag 'https://alegreme.sfo2.digitaloceanspaces.com/stable-images/favicon-144x144.png', {sizes: "144x144", type: "image/png"} %>
 
 	<link rel="manifest" href="<%= asset_url 'manifest.json' %>"/>
-	<%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+	<%= stylesheet_pack_tag 'application', media: 'all', 'data-turbo-track': 'reload' %>
 
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Varela+Round|Roboto:300,400,500,700&display=swap">
 
 	<%= Gon::Base.render_data %>
 
-	<%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
-	<%= javascript_pack_tag 'dashboard', 'data-turbolinks-track': 'reload', defer: true %>
+	<%= javascript_pack_tag 'application', 'data-turbo-track': 'reload', defer: true %>
+	<%= javascript_pack_tag 'dashboard', 'data-turbo-track': 'reload', defer: true %>
 </head>
 <body>
 
