--- a/web/app/views/layouts/welcome.html.erb
+++ b/web/app/views/layouts/welcome.html.erb
@@ -32,7 +32,7 @@
 		<%= inline_assets 'fcp.css' %>
 	</style>
 
-	<%= stylesheet_pack_tag 'welcome', media: 'all', 'data-turbolinks-track': 'reload' %>
+	<%= stylesheet_pack_tag 'welcome', media: 'all', 'data-turbo-track': 'reload' %>
 	<meta name="ahrefs-site-verification" content="80da30957eb75f93ad532d2b460ba12112e89b2e64775da1150f2e02566667cf">
 </head>
 <body>
