--- a/web/app/views/users/passwords/edit.html.erb
+++ b/web/app/views/users/passwords/edit.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_pack_tag 'text-field', 'select', 'data-turbolinks-track': 'reload', defer: true %>
+<%= javascript_pack_tag 'text-field', 'select', 'data-turbo-track': 'reload', defer: true %>
 
 <section class="me-page me-page--justify-center is-animated">
   <div>
