--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -69,7 +69,7 @@
 		<div class="<%= class_names('col-span-12 md:col-span-5 md:px-5',
 																{ 'hidden md:block': controller_name != 'search' }) %>">
 			<form
-				class="flex items-center h-full px-2 bg-white rounded md:px-5"
+				class="flex items-center h-full px-2 bg-white rounded"
 				data-controller="search"
 				data-search-target="search"
 				data-reflex-permanent
@@ -84,7 +84,7 @@
 				<!--				</svg>-->
 				<input autocomplete="false"
 							 name="q"
-							 class="bg-gray-200 text-gray-700 focus:bg-white focus:border-transparent focus:outline-none focus:ring focus:ring-green-500 h-10 px-4 mx-auto placeholder-gray-500 py-1 rounded-full w-full"
+							 class="bg-gray-200 focus:bg-white focus:border-transparent focus:outline-none focus:ring focus:ring-green-500 font-light h-10 md:bg-gray-50 md:shadow-inner mx-auto placeholder-gray-400 px-4 py-1 rounded text-sm w-full"
 							 id="text-field-shape-one"
 							 placeholder="Busque por eventos ou tags..."
 							 type="text"
