--- a/web/app/views/layouts/_top-app-bar.html.erb
+++ b/web/app/views/layouts/_top-app-bar.html.erb
@@ -111,7 +111,13 @@
 					<% end %>
 					<%#= link_to('Sair', destroy_user_session_path, method: :delete, class: 'hidden md:inline-block text-gray-500 font-sm') %>
 				<% else %>
-					<%= link_to 'Criar conta', new_user_registration_path, data: { 'gtm-action': 'click', 'gtm-category': 'Funil', 'gtm-label': 'Criar meu perfil' }, class: 'hidden md:inline-block text-gray-500 font-sm text-green-500 hover:text-gray-600' %>
+					<%= link_to 'Criar conta',
+											new_user_registration_path,
+											data:     {
+												'gtm-action':   'click',
+												'gtm-category': 'Funil',
+												'gtm-label':    'Criar meu perfil'
+											}, class: 'bg-green-500 border border-transparent focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2 font-medium hover:bg-green-600 inline-flex items-center px-4 py-2 rounded-md shadow-sm text-sm text-white' %>
 				<% end %>
 			<% end %>
 		</div>
