Refactor to use different calendar component to users#agenda

--- a/web/app/components/calendar_component.html.erb
+++ b/web/app/components/calendar_component.html.erb
@@ -1,8 +1,8 @@
-<%= content_tag :div, id: 'calendar', data: { controller: 'left-sidebar--calendar' }, class: 'h-full' do %>
+<%= content_tag :div, id: 'calendar', data: { controller: 'calendar' }, class: 'h-full' do %>
 	<div class="h-full">
-		<div data-calendar-target="calendar" class="bg-white mb-5 md:mb-2 md:py-5 md:rounded-lg md:text-center pl-2 pr-5 rounded-lg select-none tap-highlight-none text-center">
+		<div data-calendar-target="calendar" class="md:py-3 md:rounded-lg md:text-center md:mx-0 md:mb-2 md:shadow-none select-none tap-highlight-none bg-white py-3 rounded-lg text-center mx-3 mb-5">
 			<div class="capitalize flex font-medium items-center justify-between pb-5 px-8 rounded-t-lg text-gray-500">
-				<%= content_tag :div, id: 'calendar-previous', data: { reflex: 'click->LeftSidebar::Calendar#prev_month', start_date: start_date }, class: 'cursor-pointer text-gray-400 md:hover:bg-green-500 md:hover:text-white h-8 w-8 rounded-full flex justify-center items-center' do %>
+				<%= content_tag :div, id: 'calendar-previous', data: { reflex: 'click->Calendar#prev_month', start_date: start_date }, class: 'cursor-pointer text-gray-400 md:hover:bg-green-500 md:hover:text-white h-8 w-8 rounded-full flex justify-center items-center' do %>
 					<svg class="h-5 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 						<path d="M0 0h24v24H0z" fill="none"/>
 						<path d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"/>
@@ -13,7 +13,7 @@
 					<%= t('date.month_names')[start_date.month] %> <%= start_date.year %>
 				</span>
 
-				<%= content_tag :div, id: 'calendar-next', data: { reflex: 'click->LeftSidebar::Calendar#next_month', start_date: start_date }, class: 'cursor-pointer text-gray-400 md:hover:bg-green-500 md:hover:text-white h-8 w-8 rounded-full flex justify-center items-center' do %>
+				<%= content_tag :div, id: 'calendar-next', data: { reflex: 'click->Calendar#next_month', start_date: start_date }, class: 'cursor-pointer text-gray-400 md:hover:bg-green-500 md:hover:text-white h-8 w-8 rounded-full flex justify-center items-center' do %>
 					<svg class="h-5 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
 						<path d="M0 0h24v24H0z" fill="none"/>
 						<path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"/>
@@ -34,7 +34,7 @@
 				<% date_range.each_slice(7) do |week| %>
 					<tr>
 						<% week.each do |day| %>
-							<%= content_tag :td, id: "calendar-#{day.strftime}", data: { action: 'click->left-sidebar--calendar#inDay', day: day.strftime }, class: td_classes_for(day) do %>
+							<%= content_tag :td, id: "calendar-#{day.strftime}", data: { action: 'click->calendar#inDay', day: day.strftime }, class: td_classes_for(day) do %>
 								<%= content_tag :div, class: helpers.class_names('mx-auto text-xs day-of-month',
 																																 { 'mt-1': @indicators&.include?(day) }) do %>
 									<%= day.strftime '%e' %>
@@ -53,7 +53,7 @@
 		</div>
 
 
-		<div id="calendar__list" style="<%= helpers.class_names 'hidden': @events&.empty? %>">
+		<div id="calendar__list" class="mb-20">
 			<div class="<%= helpers.class_names('mt-3 flex items-center px-2 py-1 mx-auto text-sm font-semibold text-white bg-green-500 rounded-full select-none w-content',
 																					'hidden': !@filter) %>">
 				<svg class="h-5 mr-2 text-white fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
@@ -64,20 +64,20 @@
 			</div>
 			<%= content_tag :div,
 											data:  {
-												reflex: 'click->LeftSidebar::Calendar#clear_filter'
+												reflex: 'click->Calendar#clear_filter'
 											},
 											id:    'calendar__clear-filter',
 											class: helpers.class_names('px-5 text-center cursor-pointer underline text-gray-500 text-xs',
 																								 'hidden': !@filter) do %>
 				Remover filtro
 			<% end %>
-			<%= render LeftSidebar::GroupByDayListComponent.new(events: @events, user: @user) if @events.present? %>
+			<%= render Calendar::HorizontalEventComponent.with_collection(@events, user: @user) if @events.present? %>
 		</div>
 
 		<% if @user && @events.empty? && (@start_date != Date.today) %>
 			<div id="calendar__filter" class="p-2 my-6 mt-3 text-sm text-center text-gray-600 rounded-lg bg-gray-50">
 				Sem eventos na sua agenda neste dia.
-				<%= content_tag :div, data: { reflex: 'click->LeftSidebar::Calendar#clear_filter' }, class: 'text-center cursor-pointer underline text-gray-500 text-sm' do %>
+				<%= content_tag :div, data: { reflex: 'click->Calendar#clear_filter' }, class: 'text-center cursor-pointer underline text-gray-500 text-sm' do %>
 					Remover filtro
 				<% end %>
 			</div>
