--- a/web/app/components/main_sidebar/large_event_component.html.erb
+++ b/web/app/components/main_sidebar/large_event_component.html.erb
@@ -35,7 +35,7 @@
 					</div>
 				</div>
 				<div class="p-5">
-					<h1 class="text-2xl font-medium leading-tight text-gray-600">
+					<h1 class="text-2xl font-semibold leading-tight text-gray-700">
 						<%= @event.details_name %>
 					</h1>
 					<div class="flex items-center -ml-1">
