--- a/web/app/components/modal/sign_in_component.html.erb
+++ b/web/app/components/modal/sign_in_component.html.erb
@@ -1,18 +1,63 @@
 <%= content_tag :div, id: 'modal', data: { controller: 'modal--sign-in' } do %>
 	<% if @opened %>
-		<div class="fixed h-screen left-0 top-0 w-screen z-50">
-			<div class="absolute flex h-screen items-center w-screen z-20">
-				<div class="bg-white max-w-xs mx-auto p-2 rounded text-center z-20">
-					<div class="leading-snug mx-3 my-4 text-lg">
-						<%= @text || element['data-text'].html_safe %>
-					</div>
-					<div>
-						<%= link_to 'Criar conta', new_user_registration_path, data: { 'gtm-action': 'click', 'gtm-category': 'Funil', 'gtm-label': 'Criar meu perfil' }, class: 'bg-green-500 flex font-semibold justify-center mt-2 p-2 rounded text-lg text-white w-full' %>
-					</div>
+
+		<div class="fixed z-10 inset-0 overflow-y-auto">
+			<div class="flex items-center justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
+				<!--
+					Background overlay, show/hide based on modal state.
+
+					Entering: "ease-out duration-300"
+						From: "opacity-0"
+						To: "opacity-100"
+					Leaving: "ease-in duration-200"
+						From: "opacity-100"
+						To: "opacity-0"
+				-->
+				<div data-action="click->modal--sign-in#close" class="fixed inset-0 transition-opacity" aria-hidden="true">
+					<div class="absolute inset-0 bg-gray-500 opacity-75"></div>
 				</div>
-				<div data-action="click->modal--sign-in#close" class="bg-black absolute h-full left-0 opacity-75 top-0 w-full z-10">
+
+				<!-- This element is to trick the browser into centering the modal contents. -->
+				<span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+				<!--
+					Modal panel, show/hide based on modal state.
+
+					Entering: "ease-out duration-300"
+						From: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+						To: "opacity-100 translate-y-0 sm:scale-100"
+					Leaving: "ease-in duration-200"
+						From: "opacity-100 translate-y-0 sm:scale-100"
+						To: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+				-->
+				<div class="inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full" role="dialog" aria-modal="true" aria-labelledby="modal-headline">
+					<div class="bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4">
+						<div class="sm:flex sm:items-start">
+							<div class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-green-100 sm:mx-0 sm:h-10 sm:w-10">
+								<!-- Heroicon name: exclamation -->
+								<svg class="h-6 w-6 text-green-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+									<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"/>
+								</svg>
+							</div>
+							<div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
+								<h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-headline">
+									Você precisa de um conta
+								</h3>
+								<div class="mt-2">
+									<p class="text-sm text-gray-500">
+										<%= @text || element['data-text'].html_safe %>
+									</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse">
+						<%= content_tag :a, href: new_user_registration_path, class: 'bg-green-500 cursor-pointer focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-offset-2 font-medium hover:bg-green-600 inline-flex justify-center mt-3 px-4 py-2 rounded-md shadow-sm sm:ml-3 sm:mt-0 sm:text-sm sm:w-auto text-base text-white w-full', data: { 'gtm-action': 'click', 'gtm-category': 'Funil', 'gtm-label': 'Criar meu perfil' } do %>
+							Criar conta
+						<% end %>
+					</div>
 				</div>
 			</div>
 		</div>
+
 	<% end %>
 <% end %>
