Adjust style of calendar and horizontal_events

--- a/web/app/components/hero/train_event_component.html.erb
+++ b/web/app/components/hero/train_event_component.html.erb
@@ -22,7 +22,7 @@
 												action:     'click->hero--train-event#openEvent',
 												'event-id': @event.id
 											},
-											class: 'font-semibold md:hover:underline mb-1 leading-snug text-gray-600' do %>
+											class: 'font-bold inline-block leading-snug md:hover:underline text-gray-600' do %>
 				<%= @event.details_name %>
 			<% end %>
 			<div class="text-xs text-gray-500 mt-1">
