--- a/web/app/components/calendar/horizontal_event_component.html.erb
+++ b/web/app/components/calendar/horizontal_event_component.html.erb
@@ -1,5 +1,5 @@
 <%= content_tag :div, id: dom_id(@event), data: { controller: 'calendar--horizontal-event', 'calendar--horizontal-event-open-in-sidebar': @open_in_sidebar }, class: 'relative last:z-10' do %>
-	<div class="bg-white border border-gray-100 flex justify-between md:border mt-2 mx-2 md:mx-0 px-3 md:px-5 py-3 rounded-lg">
+	<div class="bg-white border-gray-100 flex justify-between md:border mt-2 mx-2 md:mx-0 px-3 md:px-5 py-3 rounded-lg">
 		<div class="pr-6">
 			<div class="mb-1 text-sm md:text-xs text-gray-500">
 				<%= helpers.day_of_week(@event.start_time).titlecase %> às <%= helpers.format_hour @event.first_day_time %>h
@@ -11,7 +11,7 @@
 												action:                  'click->calendar--horizontal-event#openEvent',
 												'event-id':              @event.id
 											},
-											class: 'font-bold md:hover:underline mb-2 inline-block leading-snug text-gray-700' do %>
+											class: 'font-bold md:hover:underline mb-1 inline-block leading-snug text-gray-700' do %>
 				<%= @event.details_name %>
 			<% end %>
 			<div class="text-sm md:text-xs md:mt-2 text-gray-500">
