--- a/web/app/components/main_sidebar/group_by_day_list_component.html.erb
+++ b/web/app/components/main_sidebar/group_by_day_list_component.html.erb
@@ -1,7 +1,7 @@
 <div class="md:px-5">
 	<% @events.group_by { |e| e.first_day_time.to_date.strftime("%Y-%m-%d") }.each do |group| %>
-		<div id="<%= "main-sidebar--group-#{group[0]}" %>" class="mb-5 md:mb-12 content-visibility-auto contain-intrinsic-size-md">
-			<div class="<%= helpers.class_names('bg-white md:bg-white flex-1 leading-6 md:leading-normal md:px-5 pb-2 pt-2 px-5 sticky text-center text-gray-600 top-0 z-10',
+		<div id="<%= "main-sidebar--group-#{group[0]}" %>" class="mb-12 content-visibility-auto contain-intrinsic-size-md">
+			<div class="<%= helpers.class_names('bg-white md:bg-white flex-1 leading-6 md:leading-normal md:px-5 md:pb-2 pt-2 px-5 sticky text-center text-gray-600 top-0 z-10',
 																					{ 'top-0':  helpers.mobile_device?,
 																						'top-12': helpers.mobile_device? && current_page?('/minha-agenda'),
 																						'top-16': !helpers.mobile_device? }) %>">
@@ -14,7 +14,7 @@
 					<div class="text-sm text-gray-500">daqui <%= distance_of_time_in_words group[0].to_date, DateTime.now %></div>
 				<% end %>
 			</div>
-			<div id="vertical-daily-events" class="py-2">
+			<div id="vertical-daily-events" class="">
 				<%= render MainSidebar::HorizontalEventComponent.with_collection(group[1], user: @user, open_in_sidebar: @open_in_sidebar) %>
 			</div>
 		</div>
