--- a/web/app/assets/images/manifest.json.erb
+++ b/web/app/assets/images/manifest.json.erb
@@ -1,49 +1,54 @@
 {
-    "name": "Alegreme",
-    "description": "Aproveite a cidade de Porto Alegre",
-    "short_name": "Alegreme",
-    "display": "fullscreen",
-    "orientation": "portrait",
-    "scope": "/",
-    "start_url": "/?pwa=true&utm_source=pwa",
-    "lang": "pt-BR",
-    "categories": ["lifestyle", "entertainment"],
-    "icons": [
-      {
-        "src": "<%= image_url 'icons/launcher-icon-36x36.png' %>",
-        "sizes": "36x36",
-        "type": "image/png"
-      },
-      {
-        "src": "<%= image_url 'icons/launcher-icon-48x48.png' %>",
-        "sizes": "48x48",
-        "type": "image/png"
-      },
-      {
-        "src": "<%= image_url 'icons/launcher-icon-72x72.png' %>",
-        "sizes": "72x72",
-        "type": "image/png"
-      },
-      {
-        "src": "<%= image_url 'icons/launcher-icon-96x96.png' %>",
-        "sizes": "96x96",
-        "type": "image/png"
-      },
-      {
-        "src": "<%= image_url 'icons/launcher-icon-144x144.png' %>",
-        "sizes": "144x144",
-        "type": "image/png"
-      },
-      {
-        "src": "<%= image_url 'icons/launcher-icon-192x192.png' %>",
-        "sizes": "192x192",
-        "type": "image/png"
-      },
-      {
-        "src": "<%= image_url 'icons/launcher-icon-512x512.png' %>",
-        "sizes": "512x512",
-        "type": "image/png"
-      }
-    ],
-    "splash_pages": null
-  }
+	"name": "Alegreme",
+	"description": "Eventos em Porto Alegre",
+	"short_name": "Alegreme",
+	"display": "standalone",
+	"orientation": "portrait",
+	"theme_color": "#6b7280",
+	"background_color": "#ffffff",
+	"scope": "/",
+	"start_url": "/?pwa=true&utm_source=pwa",
+	"lang": "pt-BR",
+	"categories": [
+		"lifestyle",
+		"entertainment"
+	],
+	"icons": [
+		{
+			"src": "<%= image_url 'icons/launcher-icon-36x36.png' %>",
+			"sizes": "36x36",
+			"type": "image/png"
+		},
+		{
+			"src": "<%= image_url 'icons/launcher-icon-48x48.png' %>",
+			"sizes": "48x48",
+			"type": "image/png"
+		},
+		{
+			"src": "<%= image_url 'icons/launcher-icon-72x72.png' %>",
+			"sizes": "72x72",
+			"type": "image/png"
+		},
+		{
+			"src": "<%= image_url 'icons/launcher-icon-96x96.png' %>",
+			"sizes": "96x96",
+			"type": "image/png"
+		},
+		{
+			"src": "<%= image_url 'icons/launcher-icon-144x144.png' %>",
+			"sizes": "144x144",
+			"type": "image/png"
+		},
+		{
+			"src": "<%= image_url 'icons/launcher-icon-192x192.png' %>",
+			"sizes": "192x192",
+			"type": "image/png"
+		},
+		{
+			"src": "<%= image_url 'icons/launcher-icon-512x512.png' %>",
+			"sizes": "512x512",
+			"type": "image/png"
+		}
+	],
+	"splash_pages": null
+}
