--- a/web/app/components/calendar_component.html.erb
+++ b/web/app/components/calendar_component.html.erb
@@ -1,6 +1,6 @@
 <%= content_tag :div, id: 'calendar', data: { controller: 'calendar' }, class: 'h-full' do %>
 	<div class="h-full">
-		<div data-calendar-target="calendar" class="md:py-3 md:rounded-lg md:text-center md:mx-0 md:mb-2 md:shadow-none select-none tap-highlight-none bg-white py-3 rounded-lg text-center mx-3 mb-5">
+		<div data-calendar-target="calendar" class="select-none tap-highlight-none md:py-3 md:rounded-lg md:text-center md:mx-0 md:mb-2 md:shadow-none bg-white py-3 rounded-lg text-center mx-3 mb-5">
 			<div class="capitalize flex font-medium items-center justify-between pb-5 px-8 rounded-t-lg text-gray-500">
 				<%= content_tag :div, id: 'calendar-previous', data: { reflex: 'click->Calendar#prev_month', start_date: start_date }, class: 'cursor-pointer text-gray-400 md:hover:bg-green-500 md:hover:text-white h-8 w-8 rounded-full flex justify-center items-center' do %>
 					<svg class="h-5 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
