--- a/web/app/components/left_sidebar/horizontal_event_component.html.erb
+++ b/web/app/components/left_sidebar/horizontal_event_component.html.erb
@@ -1,5 +1,5 @@
 <%= content_tag :div, id: dom_id(@event, :left_sidebar), data: { controller: 'left-sidebar--horizontal-event' } do %>
-	<div class="px-5 py-4 group relative">
+	<div class="select-none tap-highlight-none px-5 py-4 group relative">
 		<div class="mb-1 text-xs text-gray-500">
 			<%= helpers.day_of_week(@event.start_time).titlecase %> · <%= helpers.format_hour @event.first_day_time %>h
 		</div>
