--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -110,7 +110,7 @@
 		<%= render(LargeEventComponent.new(event: @event, user: current_user)) %>
 	</div>
 	<div class="md:col-span-4 mb-10 md:mb-0 mt-5 md:mt-0">
-		<div class="bg-gray-50 cursor-pointer flex font-bold hidden items-center bg-gray-50 md:block bottom-auto mb-5 relative rounded-xl w-auto p-3 space-y-2 text-gray-600 text-sm">
+		<div class="bg-gray-200 cursor-pointer flex font-bold hidden items-center md:block bottom-auto mb-5 relative rounded-xl w-auto p-3 space-y-2 text-gray-600 text-sm">
 			<a href="<%= @event.details_source_url %>" target="_blank" class="select-none transition-colors bg-white flex flex-1 group hover:bg-green-500 hover:text-white items-center justify-center py-3 rounded shadow-sm space-x-2 cursor-pointer">
 				<div>Abrir no facebook</div>
 				<svg class="group-hover:text-white transition-colors h-4 text-gray-400 fill-current" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -138,11 +138,6 @@
 					<% @similar_events.each do |similar_event| %>
 						<div class="flex justify-between px-5 py-3 md:border-0">
 							<div class="pr-6">
-								<div class="mb-1 text-xs  text-gray-600">
-									<%= I18n.l(similar_event.start_time, format: :long) %>
-									às <%= format_hour similar_event.first_day_time %>h
-									· <%= similar_event.categories_primary_name.titleize %>
-								</div>
 								<%= content_tag :a,
 																href:  event_path(similar_event),
 																data:  {
@@ -150,12 +145,12 @@
 																	url:        event_path(similar_event),
 																	'event-id': similar_event.id
 																},
-																class: 'md:hover:underline text-sm font-medium mb-1 leading-snug text-gray-600' do %>
+																class: 'md:hover:underline inline-block md:text-sm font-semibold mb-1 leading-snug text-gray-600' do %>
 									<%= similar_event.details_name %>
 								<% end %>
 							</div>
 							<div>
-								<div data-controller="ripple" class="relative w-24 mt-6 overflow-hidden rounded shadow-xs ripple ripple-white">
+								<div data-controller="ripple" class="relative w-24 overflow-hidden rounded shadow-xs ripple ripple-white">
 									<%= link_to event_path(similar_event),
 															data: {
 																action:     'click->main-sidebar--horizontal-event#openEvent',
