--- a/web/app/views/organizers/show.html.erb
+++ b/web/app/views/organizers/show.html.erb
@@ -1,6 +1,6 @@
 <%= render Modal::SignInComponent.new(text: 'Crie uma conta para salvar eventos favoritos e receber recomendações únicas') %>
 
-<section class="min-h-screen mt-3 mb-24 is-animated md:mt-16">
+<section class="min-h-screen mb-24 is-animated md:mt-16">
 
 	<% content_for :canonical_url, organizer_url(@organizer, format: :html) %>
 	<% content_for :meta_title, "Eventos por #{@organizer.details_name} em Porto Alegre | Alegreme.com" %>
